# gemini-training-oreilly-20262020

./: .gitignore  README.md  lab_handout.md  package-lock.json  package.json  slides.md
commands/: README.md  docs.toml  refactor.toml  review.toml  test-gen.toml
config-examples/: README.md  settings-advanced.json  settings-basic.json  settings-mcp.json  settings-safe.json
exercises/java/bookstore-api/: GEMINI.md  README.md  pom.xml
exercises/java/bookstore-api/src/main/java/com/example/bookstore/: BookstoreApplication.java
exercises/java/bookstore-api/src/main/java/com/example/bookstore/controller/: BookController.java  GlobalExceptionHandler.java
exercises/javascript/my-task-manager/: .gitignore  README.md  index.js  package-lock.json  package.json  server.js  task.js  taskManager.js  taskManager.test.js  tasks.json  test_script.js
exercises/javascript/my-task-manager/public/: client.js  index.html  style.css
exercises/javascript/task-manager/: README.md  package.json
exercises/javascript/task-manager/src/: task.js  taskManager.js
exercises/python/weather-app/: API_DOCS.md  README.md  app.py  architecture.html  pyproject.toml  requirements.txt
exercises/python/weather-app/app/: __init__.py
exercises/python/weather-app/app/routes/: main.py  weather.py
exercises/python/weather-app/app/services/: weather_service.py
exercises/python/weather-app/docs/: API_DOCS.md
exercises/python/weather-app/tests/: test_weather.py  test_weather_integration.py
gemini-md-examples/: README.md  global-context.md  java-spring.md  python-flask.md  typescript-react.md
(+3 files in other folders)
